--- a/frontend/src/screens/LandingPage/LandingPage.css
+++ b/frontend/src/screens/LandingPage/LandingPage.css
@@ -9,11 +9,13 @@
 
 .title {
   font-size: 90px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .subtitle {
-  font-size: 30px;
+  font-size: 25px;
   padding-top: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .intro-text {
